# Compos3D

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  a2_part5_guide.md  anyscale_job.yaml  conftest.py  modal_app.py  pyproject.toml  pytest.ini  submit_job.py
.github/workflows/: ci.yml
a3/: README.md  make_p2_figures.py  make_p4_results_figures.py  make_p4_scaling_figures.py  nanochat_modal.py
a3/part2/: nanochat_modal.py  nanochat_modal_yarn.py
a3/part2/patches/: base_train.py  chat_sft.py  checkpoint_manager.py  gpt.py
a3/part2_arch/: README.md  nanochat_modal.py
a3/part2_arch/patches/: base_eval.py  base_train.py  gpt.py
a3/part2_mtp/: README.md  nanochat_modal.py
a3/part2_mtp/patches/: base_train.py  gpt.py
a3/part3/: README.md  eval_longctx.py  nanochat_modal.py  vol_clean.py
a3/part3/patches/: base_train.py
a3/part4/: README.md  nanochat_modal.py
a4/: README.md
a4/part2/: hparam_sweep.py  nanochat_modal.py
a4/part2/patches/: base_eval.py  chat_sft.py  checkpoint_manager.py  mid_train.py
a4/part2/tasks/: metamath.py  numina_math.py  ultrachat.py
a4/part3/: nanochat_modal.py
a4/part3/patches/: chat_rl.py  (+1 more)
a4/part4/: modal_upload.py  nanochat_modal.py  run_all.ps1  scratch.py
config/: env.aws.yaml  env.dev.yaml  env.prod.yaml  env.staging.yaml
scripts/: build_and_push_docker.sh  check_deployment.sh  create_aws_secret.ps1  deploy_aws.sh  run_pipeline_on_anyscale.py
src/compos3d_dp/: cli.py  config.py
terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/environments/: dev.tfvars  prod.tfvars  staging.tfvars
tests/: test_blender_rendering.py  test_bronze_ingestion.py  test_bronze_ingestion_distributed.py  test_direct_render.py  test_generation_pipeline.py  test_gold_aggregation_distributed.py  test_hypogenic.py  test_orchestrator.py  test_pipeline_e2e.py  test_silver_transformation_distributed.py  test_storage.py  test_training_pipeline.py
(+65 files in other folders)
