[project]
name = "compos3d-data-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.49",
    "great-expectations>=1.12.3",
    "mypy>=1.19.1",
    "pandas>=2.3.3",
    "pre-commit>=4.5.1",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0.3",
    "rich>=14.3.2",
    "ruff>=0.15.1",
    "s3fs>=2026.2.0",
    "typer>=0.23.1",
    "modal>=0.63.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compos3d_dp"]
